// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Time Axis Examples should prioritise parentLevel.tick over tick 1`] = `
{
  "height": 30.798828125,
  "width": 722,
  "x": 58,
  "y": 487,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0, 1] 1`] = `
{
  "height": 24.798828125,
  "width": 722,
  "x": 58,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.2, 0.5] 1`] = `
{
  "height": 24.798828125,
  "width": 722,
  "x": 58,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.3, 0.35] 1`] = `
{
  "height": 24.798828125,
  "width": 722,
  "x": 58,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.4, 0.4125] 1`] = `
{
  "height": 24.798828125,
  "width": 732.3400001525879,
  "x": 58,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.25, 0.35] 1`] = `
{
  "height": 24.798828125,
  "width": 722,
  "x": 58,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.35, 0.375] 1`] = `
{
  "height": 24.798828125,
  "width": 722,
  "x": 58,
  "y": 493,
}
`;

exports[`Time Axis Examples when zooming for should render as expected as zoom [0.45, 0.45625] 1`] = `
{
  "height": 24.798828125,
  "width": 722,
  "x": 58,
  "y": 493,
}
`;
